# Pathtracer-Spectral

./: .gitignore  CMakeLists.txt  README.md
include/: camera.cuh  cuda_utils.cuh  hittable.cuh  image_io.h  material.cuh  ray.cuh  scene_setup.h  spectrum.cuh  vec3.cuh
src/: cuda_kernels.cu  image_io.cpp  main.cpp  scene_setup.cpp
